--- a/package.json
+++ b/package.json
@@ -55,14 +55,15 @@
     "electron-log": "^2.2.7",
     "electron-updater": "^2.8.1",
     "highcharts": "^5.0.12",
+    "ioredis": "^3.1.2",
+    "iview": "^2.0.0",
     "jquery": "^3.2.1",
+    "redis": "^2.8.0",
     "sockjs-client": "^1.1.4",
     "vue": "^2.4.2",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.7.0",
-    "vueify": "^9.4.1",
-    "iview": "^2.0.0",
-    "redis": "^2.8.0"
+    "vueify": "^9.4.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
