Add Set and ZSet view page

--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
           "zip"
         ],
         "linux": [
-          "deb",
-          "rpm",
-          "flatpak"
+          "deb"
         ]
       },
       "electronPackagerConfig": {
