--- a/package.json
+++ b/package.json
@@ -49,29 +49,30 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "electron-compile": "^6.4.1",
+    "electron-compile": "^6.4.2",
     "electron-devtools-installer": "^2.2.0",
-    "electron-forge": "^3.1.1",
+    "electron-forge": "^5.1.1",
     "electron-log": "^2.2.7",
     "electron-updater": "^2.8.1",
-    "highcharts": "^6.0.1",
-    "ioredis": "^3.1.2",
-    "iview": "^2.0.0",
+    "highcharts": "^6.0.7",
+    "ioredis": "^3.2.2",
+    "iview": "^2.11.0",
     "jquery": "^3.2.1",
     "redis": "^2.8.0",
     "sockjs-client": "^1.1.4",
-    "vue": "^2.4.2",
+    "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
-    "vue-router": "^2.7.0",
+    "vue-router": "^3.0.1",
     "vueify": "^9.4.1",
-    "vue-codemirror": "^3.1.4",
-    "codemirror": "^5.29.0"
+    "vue-template-compiler": "^2.5.16",
+    "vue-codemirror": "^4.0.4",
+    "codemirror": "^5.36.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "electron-prebuilt-compile": "1.7.9",
-    "electron-builder": "^19.18.1"
+    "electron-prebuilt-compile": "1.8.4",
+    "electron-builder": "^20.6.2"
   }
 }
