--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redis-client-app",
   "productName": "RedisClient",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "Redis Client Application",
   "main": "src/main.js",
   "scripts": {
@@ -27,14 +27,22 @@
           "zip"
         ],
         "linux": [
-          "deb"
+          "deb",
+          "rpm"
         ]
       },
       "electronPackagerConfig": {
-        "icon": "./src/asserts/icons/icon"
+        "icon": "src/asserts/icons/icon",
+        "win32metadata": {
+          "ProductName": "Redis客户端",
+          "CompanyName": "RedisClient"
+        }
       },
       "electronWinstallerConfig": {
-        "name": "RCAInstaller"
+        "title": "Redis客户端",
+        "loadingGif": "src/asserts/loading.gif",
+        "setupIcon": "src/asserts/icons/icon.ico",
+        "iconUrl": "https://uugu.org/img/icon.ico"
       },
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
@@ -48,31 +56,32 @@
     }
   },
   "dependencies": {
-    "axios": "^0.16.1",
-    "electron-compile": "^6.4.2",
-    "electron-devtools-installer": "^2.2.0",
-    "electron-forge": "^5.1.1",
-    "electron-log": "^2.2.7",
-    "electron-updater": "^2.8.1",
-    "highcharts": "^6.0.7",
-    "ioredis": "^3.2.2",
-    "iview": "^2.11.0",
+    "axios": "^0.18.0",
+    "electron-compile": "^6.4.3",
+    "electron-devtools-installer": "^2.2.4",
+    "electron-forge": "^5.2.2",
+    "electron-log": "^2.2.17",
+    "electron-updater": "^3.1.2",
+    "highcharts": "^6.1.4",
+    "ioredis": "^4.0.0",
+    "iview": "^3.1.3",
     "jquery": "^3.2.1",
     "redis": "^2.8.0",
-    "sockjs-client": "^1.1.4",
-    "vue": "^2.5.16",
+    "sockjs-client": "^1.3.0",
+    "vue": "^2.5.17",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vueify": "^9.4.1",
-    "vue-template-compiler": "^2.5.16",
-    "vue-codemirror": "^4.0.4",
+    "vue-template-compiler": "^2.5.17",
+    "vue-codemirror": "^4.0.5",
     "codemirror": "^5.36.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "electron-prebuilt-compile": "1.8.4",
-    "electron-builder": "^20.6.2"
+    "electron-prebuilt-compile": "3.0.0",
+    "electron-builder": "^20.6.2",
+    "vue-template-compiler": "^2.5.16"
   }
 }
